# actix-web-rest-api-example

./: Cargo.toml  README.md
application/: Cargo.toml
application/src/: lib.rs
application/src/services/: users.rs
application/src/usecases/hello/: mod.rs
application/src/usecases/users/: create_user.rs  find_user_by_id.rs  mod.rs
application/src/usecases/users/create_user/: input.rs  interactor.rs  mod.rs  output.rs  usecase.rs
application/src/usecases/users/find_user_by_id/: input.rs  interactor.rs  mod.rs  output.rs  usecase.rs
domain/: Cargo.toml
domain/src/entities/: user.rs
domain/src/repositories/: users.rs
infrastructure/: Cargo.toml
infrastructure/src/repositories/: users.rs
web/: Cargo.toml
web/src/: main.rs
web/src/handlers/: mod.rs
web/src/handlers/hello/: hello_reply.rs  hello_world.rs
web/src/handlers/users/: create_user.rs  find_user_by_id.rs  mod.rs
web/src/handlers/users/create_user/: handler.rs  request.rs  response.rs
web/src/handlers/users/find_user_by_id/: handler.rs  request.rs  response.rs
