[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
actix-web = "3"
serde ={ version = "1.0.132", features = ["derive"] }
serde_json = "^1.0.41"